Fixed icon alignment issues

--- a/src/components/lbs-button/lbs-button.scss
+++ b/src/components/lbs-button/lbs-button.scss
@@ -31,7 +31,7 @@
         text-align: left;
     }
 
-    &.centered > i {
+    &.centered > lbs-icon {
         margin: 0 auto;
     }
 
